--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 author: 
   name: K. Bodie Weedop
 
-# url: "https://bweedop.github.io/"
-# baseurl: "/jekyll-science"
+url: "https://bweedop.github.io/"
+baseurl: "/jekyll-science"
 
 title: Lab Notebook
 
