--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 author: 
   name: K. Bodie Weedop
 
-url: "https://bweedop.github.io/"
+url: "https://bweedop.github.io"
 baseurl: "jekyll-science"
 
 title: Lab Notebook
