--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,12 @@ logo: half.png
 
 googlefonts: Roboto
 
-text-color: #000000
-top-navbar-color: #F5F5F5
-top-navbar-link-color: #000000
-footer-color: #000000
-footer-link-color: #FFFFFF
-
-sass:
-  sass_dir: _sass
+text-color: "#000000"
+top-navbar-color: "#F5F5F5"
+top-navbar-link-color: "#000000"
+top-navbar-link-hover: "#FF0000"
+footer-color: "#000000"
+footer-link-color: "#FFFFFF"
 
 collections:
   authors:
